test/tests/compiler/9_functions/invalid_types/extra_credit/bitwise_op_function.plx
pub fn x(none) i32;

pub fn main(none) i32 {
    x >> 2
    return 0
}
